@@ -39,6 +39,10 @@ PyObject *MainAsPyList(void);
 void MainRepositionWindowDefault(PyMOLGlobals *G);
 
 void MainSetWindowVisibility(int mode);
+void MainMaximizeWindow(PyMOLGlobals *G);
+void MainSetWindowSize(PyMOLGlobals *G,int w,int h);
+void MainSetWindowPosition(PyMOLGlobals *G,int x,int y);
+void MainCheckWindowFit(PyMOLGlobals *G);
 
 #ifdef _PYMOL_OSX
 
